# packai

./: .aiignore  .aipass  .gitignore  .ignore2packai  AI_SKILLS.md  CHECKSUMS.sha256  CONTEXT.md  README.md  TECHNICAL_INFO.md  config_pack_ai.py  install.ps1  pack_ai.py  pyproject.toml  run.md  uninstall.ps1
.github/workflows/: quality.yml
docs/: architecture.md  technical-review.md  testing-strategy.md
docs/adr/: 0001-stable-application-contracts.md  0002-precompression-token-metrics.md  0003-local-pywebview-gui.md  0004-code-lines-and-verified-zip.md
src/packai/: __init__.py  __main__.py  application.py  archive.py  cli.py  clipboard.py  config.py  content.py  contracts.py  errors.py  git.py  metrics.py  naming.py  policy.py  tokenization.py  version.py
src/packai/data/: README.txt  __init__.py
src/packai/gui/: __init__.py  api.py  commands.py  contracts.py  launcher.py  tree.py  watcher.py
src/packai/gui/resources/: __init__.py  app.js  index.html  styles.css
tests/: test_pack_ai.py
tests/contract/: test_public_api.py
tests/unit/: test_git.py  test_gui_api.py  test_gui_cli.py  test_gui_commands.py  test_gui_launcher.py  test_gui_resources.py  test_gui_tree.py  test_gui_watcher.py  test_metrics.py  test_pack_service.py  test_tokenization.py
