[project]
name = "pack-ai"
version = "1.2.0"
description = "Package a project into a ZIP optimized for AI review while excluding common secrets and heavy files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
